Fixed mobile browser resizings having text and resume cutoff

--- a/src/stylesheets/bios.css
+++ b/src/stylesheets/bios.css
@@ -8,6 +8,7 @@
     font-size: 22px;
     letter-spacing: 0.1px;
     line-height: 1.3;
+    max-width: 700px;
 }
 
 #bios-container {
